--- a/style.css
+++ b/style.css
@@ -17,10 +17,11 @@ header {
 
 #jauge {
 	border: 2px black solid;
+	border-radius: 5px;
 	margin-bottom: 30px;
 	text-align: center;
 	width: 100%;
-	height: 20px;
+	height: 35px;
 }
 
 #prog {
@@ -38,6 +39,7 @@ header {
 	width: 200px;
 	font-size: 30px;
 	margin: 10px;
+	box-shadow: 5px 5px 5px grey;
 }
 
 .container {
